Bugfix: Prevent project area selection on mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -33,6 +33,7 @@
 	box-shadow: var(--shadow-md);
 	overflow: hidden;
 	position: relative;
+	user-select: none;
 }
 .main-gallery > .project {
 	aspect-ratio: 1;
